--- a/index.html
+++ b/index.html
@@ -1,23 +1,92 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Harry Potter Characters</title>
+    <title>Examen Front BBVA</title>
+    <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        th, td {
+            border: 1px solid #0faf94;
+            text-align: left;
+            padding: 10px;
+        }
+    </style>
 </head>
 <body>
-    <input type="text" id="searchInput" placeholder="Search by name...">
-    <select id="houseSelect">
-        <option value="All">All</option>
+
+    <input type="text" id="searchInput" placeholder="Buscar">
+    <select id="houseFilter" >
+        <option value="">Todas las casas</option>
         <option value="Gryffindor">Gryffindor</option>
         <option value="Hufflepuff">Hufflepuff</option>
         <option value="Ravenclaw">Ravenclaw</option>
         <option value="Slytherin">Slytherin</option>
     </select>
 
-    <table id="characterTable">
+    <table id="charactersTable" class="table table-striped table-dark">
+        <thead>
+            <tr>
+                <th scope="col">Nombre</th>
+                <th scope="col">Casa</th>
+                <th scope="col">Nacimiento</th>
+                <th scope="col">Foto</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
     </table>
 
-    <script src="main.js"></script>
+    <script>
+        async function fetchData() {
+            const response = await fetch('https://hp-api.onrender.com/api/characters');
+            const data = await response.json();
+            return data;
+        }
+
+        function createTableRow(character) {
+            const defaultImage = 'desconocido.png';
+            const image = character.image ? character.image : defaultImage;
+            const row = `
+                <tr>
+                    <td>${character.name}</td>
+                    <td>${character.house}</td>
+                    <td>${character.dateOfBirth}</td>
+                    <td><img src="${image}" alt="${character.name}" width="100"></td>
+                </tr>
+            `;
+            return row;
+        }
+
+        function filterCharacters(characters) {
+            const searchInput = document.getElementById('searchInput').value.toLowerCase();
+            const houseFilter = document.getElementById('houseFilter').value.toLowerCase();
+            const filteredCharacters = characters.filter(character => {
+                const nameMatch = character.name.toLowerCase().includes(searchInput);
+                const houseMatch = houseFilter === '' || character.house.toLowerCase() === houseFilter;
+                return nameMatch && houseMatch;
+            });
+            return filteredCharacters;
+        }
+
+        async function displayCharacters() {
+            const characters = await fetchData();
+            const filteredCharacters = filterCharacters(characters);
+            const tableBody = document.querySelector('#charactersTable tbody');
+            tableBody.innerHTML = '';
+            filteredCharacters.forEach(character => {
+                const row = createTableRow(character);
+                tableBody.innerHTML += row;
+            });
+        }
+
+        document.getElementById('searchInput').addEventListener('input', displayCharacters);
+        document.getElementById('houseFilter').addEventListener('change', displayCharacters);
+
+        displayCharacters();
+    </script>
 </body>
 </html>
